# SANITY

./: .gitignore  DVD.openxsampp.xml  README.md  SANITY_아키텍쳐명세서_v4.md  cleanup_local.sh  fix_runtime_bugs.py  index.html  pyproject.toml  requirements.txt  sanity_final.sh  sanity_go.sh  sanity_up.sh
.claude/: launch.json
SANITY/threat_modeler/: attack_rag.py  cli.py  config_schema.py  dfd.py  models.py  pipeline.py  render.py  server.py
Toolset/Toolset/: .gitignore  README.md  TOOLSET_구현지침.md
Toolset/Toolset/config/: toolset.local.example.json
Toolset/Toolset/env/: README.md  check_environment.py  install-macos.sh  install-ubuntu.sh  install-windows.ps1
Toolset/Toolset/registry/: profiles.yaml  tools.yaml
Toolset/Toolset/schemas/: artifacts.schema.json  evidence_bundle.schema.json  tool_descriptor.schema.json  tool_result.schema.json
Toolset/Toolset/scripts/: README.md
Toolset/Toolset/tests/: test_artifact_schema.py  test_evidence_bundle.py  test_executor_policy.py  test_golden_contract.py  test_mcp_contract.py  test_registry.py
Toolset/Toolset/toolset_core/: __init__.py  artifacts.py  environment.py  evidence.py  executor.py  mavlink_dvd.py  policy.py  registry.py  workspace.py
deploy/: .env.example  docker-compose.demo.yml  docker-compose.override.yml  docker-compose.yml
docs/: FIXLOG.md  QUICKSTART.md  RUN_NOW.md
gateway_log/: README.md  pyproject.toml  코드해설.md
gateway_log/gateway/: .env.example  config.yaml  docker-compose.yml
gateway_log/src/sanity_llm/: __init__.py  budget.py  client.py  errors.py  safety.py
gateway_log/src/sanity_log/: __init__.py  mask.py  schema.py  writer.py
gateway_log/tests/: test_client_mock.py  test_log.py
sanity_attacker/: Dockerfile  __init__.py  agent.py  env_adapter.py  executor.py  main.py  prompts.py  verifier.py
sanity_common/: __init__.py  aio.py  bus.py  config.py  contracts.py  errors.py  ids.py  state.py  toolset.py
sanity_common/tests/: test_ids_idempotent.py
sanity_defender/: Dockerfile  __init__.py  agent.py  env_adapter.py  executor.py  main.py  prompts.py  verifier.py
sanity_infra/: __init__.py
sanity_infra/dah/: __init__.py  runner.py
sanity_scenario_manager/: Dockerfile  __init__.py  allocator.py  main.py  manager.py  path_extractor.py  submitter.py  task_manager.py
sanity_threat_modeler/: README.md  __init__.py  graph.py  llm.py  pyproject.toml
tests/: test_core.py  test_llm.py  test_openxsampp.py  test_rag.py  test_validator.py
threat_modeler/: llm.py  openxsampp.py  stages.py  validator.py
tools/: Dockerfile.dvd_attack  control.py  reproduce_dvd_attack.ps1  sanity_dvd_attack.py  viewer.py
(+36 files in other folders)
